--- a/spring-boot-jpa-basics/src/main/resources/application.properties
+++ b/spring-boot-jpa-basics/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.h2.console.enabled=true
 
 logging.level.org.springframework = DEBUG
 
+#Instead of declaring ResourceBundleMessageSource bean
+spring.messages.basename=messages
+
+
