Boot Adv features

--- a/spring-boot-jpa-basics/src/main/resources/application.properties
+++ b/spring-boot-jpa-basics/src/main/resources/application.properties
@@ -5,7 +5,8 @@ spring.jpa.show-sql=true
 #Exposes H2 console which will act like H2 DB client
 spring.h2.console.enabled=true
 
-logging.level.org.springframework = DEBUG
+#TO see the auto-configuration when Spring BOOT starts up
+#logging.level.org.springframework = DEBUG
 
 #Instead of declaring ResourceBundleMessageSource bean
 spring.messages.basename=messages
