--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.p2.springbasics</groupId>
-  <artifactId>spring-boot-cloud</artifactId>
+  <artifactId>spring-boot</artifactId>
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
   <modules>
@@ -13,7 +13,7 @@
     <module>spring-boot-basics</module>
   </modules>
 
-  <name>spring-boot-cloud</name>
+  <name>spring-boot</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
